# vietlott-gui-app

./: Cargo.toml  readme.md
assets/: com.vietlott.datatool.desktop
src/: vietlott.rs
vietlott-app/: vietlott_6-45.txt
vietlott-app/vietlott-raw/: 00001.txt  00002.txt  00003.txt  00004.txt  00005.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00012.txt  00013.txt  00014.txt  00015.txt  00016.txt  00017.txt  00018.txt  00019.txt  00020.txt  00021.txt  00022.txt  00023.txt  00024.txt  00025.txt  00026.txt  00027.txt  00028.txt  00029.txt  00030.txt  00031.txt  00032.txt  00033.txt  00034.txt  00035.txt  00036.txt  00037.txt  00038.txt  00039.txt  00040.txt  (+1492 more)
